# async_rag_py

./: .env.example  .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/agents/: code-quality-enforcer.md  error-debugger.md
async/: async.py  asyncbest.py  coroutine.py  cpupower.py
config/: config.yaml  logging.yaml  strategies.yaml
docs/: GETTING_STARTED.md
rag/: QUICKSTART.md  README.md  company_docs.txt  rag.py  rag_smart.py  requirements.txt
rag/chroma_db/: chroma.sqlite3
rag/docs/: doc_metadata.json
rag/docs/general/: company_overview.txt
rag/docs/risk/: risk_management.txt
rag/docs/technical/: indicators.txt
rag/docs/trading/: strategies.txt
rag/temp_chroma_db/: chroma.sqlite3
scripts/: setup_db.py
src/: __init__.py
src/agents/: __init__.py  decision_agent.py  market_analyzer.py  sentiment_analyzer.py  tools.py
src/core/: __init__.py  orchestrator.py  risk_manager.py  strategy_engine.py
src/indicators/: __init__.py
src/models/: __init__.py  market_data.py  order.py  position.py
src/services/: __init__.py  event_processor.py  hyperliquid_client.py  market_data_service.py
src/storage/: __init__.py  state_manager.py  timeseries_db.py  vector_db.py
src/strategies/: __init__.py  base_strategy.py
src/ui/: __init__.py
